tests/paczka1/fuzzy1/80721708.err
Error in line 2: A479 A479 25,8
Error in line 4: jqzRo S493 85,9
Error in line 6: jqzRo S887 34,7
Error in line 9: Ku48PwpPlD A479 27,1
Error in line 15: Os8O A/79 20,9
Error in line 13: A479 S493 50,2
Error in line 10: Ku48PwpPlD S161 45,2
Error in line 20: jSUB4eSh S493 35,4
Error in line 14: Os8O A479 9,8
Error in line 26: Os8O S161 8,2
Error in line 34: Os8O S88* 6*,0
Error in line 30: Os8O S887 15,3
Error in line 38: jqzRo S493 49,0
Error in line 36: Os8O A479 42,3
